# ai-mirror

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  2026-07-10-75a3367afa13.md  AGENTS.md  CMakeLists.txt  Dockerfile.vfs-test  README.md  cleanup_user_imaxx_27f043.sh  install.sh  publish-llm-docs.sh  pyproject.toml  release.sh
build-sync-test/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  compile_commands.json
completions/: am-completion.bash
docker/: Dockerfile.smoke  Dockerfile.ubuntu22  Dockerfile.ubuntu24  am-wrapper.sh  setup-docker-group.sh  test-integration.sh
docker-test/: run-tests.sh  verify_fix.sh
end_task/: 2026-05-03-issue.md  SEC-019.md  SEC-020.md  SEC-021.md  SEC-022.md  SEC-023.md  SEC-024.md  SEC-026.md  SEC-028.md  SEC-040.md  SEC-041.md  SECURITY-001-sudoers-wildcard-privilege-escalation.md  SECURITY-002-sudo-user-spoofing.md  SECURITY-003-execvp-path-hijacking.md  SECURITY-004-safe-canonical-fallback.md  SECURITY-005-force-cleanup-no-validation.md  SECURITY-006-arbitrary-mount-via-config.md  SECURITY-007-cmd-cd-ssh-command-injection.md  SECURITY-008-username-truncation-collision.md  SECURITY-009-is-path-allowed-symlink-bypass.md  SECURITY-010-revoke-write-access-ignores-username.md  SECURITY-011-missing-compiler-hardening.md  SECURITY-012-sudoers-wildcard-still-present.md  SECURITY-013-cmd-mkdir-no-path-validation.md  SECURITY-014-cmd-mkdir-no-ai-user-ownership-check.md  SECURITY-015-pkexec-uid-env-variable-spoofing.md  SECURITY-016-bind-mount-toctou-execute-mount-uses-raw-source.md  SECURITY-017-authorized-keys-non-atomic-write.md  SECURITY-018-cmd-cd-unescaped-path-output.md
gitee-ai-mirror/: .gitignore  .gitmodules
gitee-ai-mirror/docs/: api-return-values.md
gitee-ai-mirror/gitee-ai-mirror/scripts/: setup-hooks.sh
gitee-ai-mirror/github-ai-mirror/docker-test/: Dockerfile  verify_am_status_fix.py
gitee-ai-mirror/github-ai-mirror/scripts/: commit-hook.sh
gitee-ai-mirror/github-ai-mirror/src/core/: ssh_manager.cpp
gitee-ai-mirror/gitlib-ai-mirror/src/security/: audit.cpp
gitee-ai-mirror/include/ai_mirror/cli/: parser.hpp
gitee-ai-mirror/include/ai_mirror/utils/: logger.hpp  unique_fd.hpp
gitee-ai-mirror/scripts/: setup-hooks.sh
gitee-ai-mirror/src/core/: config.cpp  user_manager.cpp
gitee-ai-mirror/src/security/: audit.cpp
github-ai-mirror/: .pre-commit-config.yaml
github-ai-mirror/src/security/: path_validator.cpp
gitlib-ai-mirror/: publish-llm-docs.sh
gitlib-ai-mirror/docker-test/: test_am_rm_compat.sh
gitlib-ai-mirror/github-ai-mirror/: .gitignore
gitlib-ai-mirror/github-ai-mirror/scripts/: post-merge-hook.sh
gitlib-ai-mirror/llm-docs/: 01_architecture.md  02_cli_reference.md
gitlib-ai-mirror/src/cli/: parser.cpp
gitlib-ai-mirror/src/daemon/: watch_stats.cpp
gitlib-ai-mirror/src/utils/: logger.cpp
include/ai_mirror/: version.hpp.in
include/ai_mirror/cli/: commands.hpp
include/ai_mirror/core/: config.hpp  graft.hpp  path_resolver.hpp  ssh_manager.hpp  user_manager.hpp  vfs_util.hpp
include/ai_mirror/daemon/: auth_monitor.hpp  health_check.hpp  mount_cleaner.hpp  watch_stats.hpp
include/ai_mirror/security/: path_validator.hpp
include/ai_mirror/utils/: hash_utils.hpp  logger.hpp  shell.hpp
issues/: 2026-04-29-sshd-strictmodes-group-write-conflict.md  SEC-042.md
llm-docs/: 01_architecture.md  02_cli_reference.md  03_security.md  04_configuration.md  05_mount_model.md  06_ownership_fix.md  README.md
memory/: experiments.md  overall.md  root.md
plan/: SEC-019.md  SEC-020.md  SEC-021.md  SEC-022.md  SEC-023.md  SEC-024.md  SEC-026.md  SEC-028.md  SEC-040.md  SEC-041.md  SEC-042.md  SECURITY-001-sudoers-wildcard-privilege-escalation.md  SECURITY-002-sudo-user-spoofing.md  SECURITY-003-execvp-path-hijacking.md  SECURITY-004-safe-canonical-fallback.md  SECURITY-005-force-cleanup-no-validation.md  SECURITY-006-arbitrary-mount-via-config.md  SECURITY-007-cmd-cd-ssh-command-injection.md  SECURITY-008-username-truncation-collision.md  SECURITY-009-is-path-allowed-symlink-bypass.md  SECURITY-010-revoke-write-access-ignores-username.md  SECURITY-011-missing-compiler-hardening.md  SECURITY-012-sudoers-wildcard-still-present.md  SECURITY-013-cmd-mkdir-no-path-validation.md  SECURITY-014-cmd-mkdir-no-ai-user-ownership-check.md  SECURITY-015-pkexec-uid-env-variable-spoofing.md  SECURITY-016-bind-mount-toctou-execute-mount-uses-raw-source.md  SECURITY-017-authorized-keys-non-atomic-write.md  SECURITY-018-cmd-cd-unescaped-path-output.md  ai-mirror-design.md
profile/: am.sh
scripts/: audit-ai-mirror-group.sh  batch-fix-am-status.sh  build_project.py  check-am-fix-amount-patched.py  check-file-permissions.sh  commit-hook.sh  docker-test.sh  fix_cmake_for_submodule.py  git-workaround.sh  patch-am-status.py  post-merge-hook.sh  set-am-mount-watch.sh  setup-hooks.sh  setup-pre-commit.sh  sync-submodules.sh
src/: am_wrapper.cpp  main.cpp
src/cli/: commands.cpp  parser.cpp
src/core/: config.cpp  graft.cpp  path_resolver.cpp  ssh_manager.cpp  user_manager.cpp
src/daemon/: auth_monitor.cpp  health_check.cpp  mount_cleaner.cpp  watch_stats.cpp
src/security/: audit.cpp  path_validator.cpp
src/tools/: mount_watch.cpp
src/utils/: logger.cpp  shell.cpp
tests/: Dockerfile.test  ai-mirror-tidy.sh  run_tests.sh  test_config.cpp  test_create_cd_all.sh  test_git_chown.sh  test_graft.cpp  test_main.cpp  test_path_validator.cpp  test_stale_mount.sh  test_user_manager.cpp
tests/docker/: Dockerfile.e2e  Dockerfile.security-test  Dockerfile.test  run_tests.sh  seccomp-mount.json  test_am_status_security.sh  test_e2e_am_status.sh  test_install.sh
tests/integration/: Dockerfile.test  test_mv_ownership.sh  test_popen.cpp  test_popen_am.sh  test_vfs_real.cpp
tests/smoke/: run_smoke_test.sh  smoke_test.sh
tests/unit/: test_commit_hook.sh  test_known_hosts.cpp  test_mount_stat.cpp  test_setup_hooks.sh  test_state_json.cpp  test_watch_stats.cpp
verification/: cbmc_is_subpath.c  cbmc_username_derivation.c  cbmc_username_sanitization.c
(+19 files in other folders)
